# glitcheD

./: .gitignore  CMakeLists.txt  Envelope.cpp  Instrument.cpp  Oscillator.cpp  Oscillator.h  README.md  SongWriter.cpp  SongWriter.h  Tuning.cpp  Tuning.h  constants.h  defs.h  main.cpp
doc/: noteasm.md
grain/: SandSynth.cpp  SandSynth.h
misc/: songs.h
synth/: Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  Instrument.cpp  Instrument.h  LFO.cpp  LFO.h  Oscillator.cpp  Oscillator.h  Parameter.cpp  Parameter.h  SaltSynth.cpp  SaltSynth.h
synth/effects/: Delay.cpp  Delay.h  Effect.h  Overdrive.cpp  Overdrive.h
synth/mod/: Envelope.cpp  Envelope.h  LFO.cpp  LFO.h  Parameter.cpp  Parameter.h
track/: NasmAssembler.cpp  NasmAssembler.h  NoteMachine.cpp  NoteMachine.h  SongWriter.cpp  SongWriter.h  WaveHelper.cpp  WaveHelper.h
util/: AudioFile.cpp  AudioFile.h  ConfigHelper.h  StereoSample.cpp  StereoSample.h  Tuning.cpp  Tuning.h
